# greetness-app

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: greetness-app_test.cpp
